# SQL_DBMS

./: CMakeLists.txt  config.json  schema.json  test.sh  test_crypto.sh  ручками.txt
include/: engine.h  exchange.h  http_server.h  schema.h  storage.h  structures.h
src/: dbms_main.cpp  engine.cpp  exchange.cpp  exchange_main.cpp  http_server.cpp  main.cpp  schema.cpp  storage.cpp
